Change default port to make room for Adminer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/fitness
 spring.datasource.username=postgres
 spring.datasource.password=example
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8081
