Update pom along with changing application name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=fitness
-spring.datasource.url=jdbc:postgresql://localhost:5432/fitness
+spring.application.name=cortado
+spring.datasource.url=jdbc:postgresql://localhost:5432/cortado
 spring.datasource.username=postgres
 spring.datasource.password=example
 spring.jpa.hibernate.ddl-auto=update
