--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,10 @@
 		<version>3.3.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.caffeinated</groupId>
-	<artifactId>fitness</artifactId>
+	<groupId>com.caffeine</groupId>
+	<artifactId>cortado</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>fitness</name>
-	<description>Caffeinated Fitness backend</description>
+	<name>cortado</name>
 	<url/>
 	<licenses>
 		<license/>
